// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid Hybrid  renders grid + grid-lg-2 1`] = `
.c0 {
  grid-template-columns: repeat(12, 1fr);
  grid-template-columns: repeat(1, 1fr);
}

@media (min-width: 992px) {
  .c0 {
    grid-template-columns: repeat(2, 1fr);
  }
}

<div
  class="c0"
  data-class="grid-1 grid-lg-2"
  data-grid="grid"
>
  <div>
    col 1
  </div>
  <div>
    col 2
  </div>
</div>
`;

exports[`Grid Hybrid  renders grid-4 + grid-md-6 1`] = `
.c0 {
  grid-template-columns: repeat(12, 1fr);
  grid-template-columns: repeat(4, auto);
}

@media (min-width: 768px) {
  .c0 {
    grid-template-columns: repeat(6, auto);
  }
}

<div
  class="c0"
  data-class="grid-[repeat(4, auto)] grid-md-[repeat(6, auto)]"
  data-grid="grid"
>
  col
</div>
`;

exports[`Grid Hybrid  renders grid-auto-2 + grid-md-auto-2 1`] = `
.c0 {
  grid-template-columns: repeat(12, 1fr);
  grid-template-columns: repeat(2, auto);
}

@media (min-width: 768px) {
  .c0 {
    grid-template-columns: repeat(2, auto);
  }
}

<div
  class="c0"
  data-class="grid-[repeat(2, auto)] grid-md-[repeat(2, auto)]"
  data-grid="grid"
>
  <div>
    col 1
  </div>
  <div>
    col 2
  </div>
</div>
`;
